// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload component onChange handler is called 1`] = `
Array [
  Array [
    Array [
      Object {
        "name": "FileName.png",
        "type": "image/png",
      },
    ],
  ],
]
`;

exports[`Upload component renders correctly 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div
    class="wrapper"
  >
    <input
      class="input"
      id="default-upload"
      multiple=""
      type="file"
    />
    <label
      for="default-upload"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button MuiButton-outlinedPrimary"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          Upload
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <p
      class="MuiTypography-root instructions Typography MuiTypography-body1"
    />
  </div>
  <div />
</div>
`;

exports[`Upload component renders correctly with buttonLabel 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div
    class="wrapper"
  >
    <input
      class="input"
      id="default-upload"
      multiple=""
      type="file"
    />
    <label
      for="default-upload"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button MuiButton-outlinedPrimary"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          Choose files
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <p
      class="MuiTypography-root instructions Typography MuiTypography-body1"
    />
  </div>
  <div />
</div>
`;

exports[`Upload component renders correctly with description 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div
    class="wrapper"
  >
    <input
      class="input"
      id="upload-with-description"
      multiple=""
      type="file"
    />
    <label
      for="upload-with-description"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button MuiButton-outlinedPrimary"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          Upload
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <p
      class="MuiTypography-root instructions Typography MuiTypography-body1"
    >
      Please upload your images here
    </p>
  </div>
  <div />
</div>
`;

exports[`Upload component renders correctly with restricted file types 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div
    class="wrapper"
  >
    <input
      accept="image/*"
      class="input"
      id="restricted-upload"
      multiple=""
      type="file"
    />
    <label
      for="restricted-upload"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button MuiButton-outlinedPrimary"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          Upload
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <p
      class="MuiTypography-root instructions Typography MuiTypography-body1"
    />
  </div>
  <div />
</div>
`;

exports[`Upload component renders with error 1`] = `
<div
  class="MuiFormControl-root Upload MuiFormControl-fullWidth"
>
  <div
    class="wrapper"
  >
    <input
      class="input"
      id="upload-with-error"
      multiple=""
      type="file"
    />
    <label
      for="upload-with-error"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button MuiButton-outlinedPrimary"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiButton-label"
        >
          Upload here
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
    </label>
    <p
      class="MuiTypography-root instructions Typography MuiTypography-body1"
    />
  </div>
  <div>
    <p
      class="MuiFormHelperText-root Mui-error"
    >
      upload-with-error field is required
    </p>
  </div>
</div>
`;
